list of plugins
# This Python 3 environment comes with many helpful analytics libraries installed
# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python
# For example, here's several helpful packages to load

import numpy as np # linear algebra
import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)

# Input data files are available in the read-only "../input/" directory
# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory

import os
for dirname, _, filenames in os.walk('/kaggle/input'):
    for filename in filenames:
        print(os.path.join(dirname, filename))

# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using "Save & Run All" 
# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session
absl-py (0.6.1)
alabaster (0.7.12)
alembic (1.0.8)
allennlp (0.7.1)
aniso8601 (9.0.1)
appdirs (1.4.3)
argon2-cffi (20.1.0)
asgiref (3.3.1)
asn1crypto (0.24.0)
astor (0.7.1)
astropy (4.0)
async-generator (1.10)
atomicwrites (1.2.1)
attrdict (2.0.1)
attrs (20.1.0)
audioread (2.1.6)
Automat (0.7.0)
aws-xray-sdk (0.95)
awscli (1.16.52)
Babel (2.6.0)
backcall (0.1.0)
backports.csv (1.0.7)
backports.functools-lru-cache (1.5)
backports.ssl-match-hostname (3.7.0.1)
backports.tempfile (1.0)
backports.weakref (1.0.post1)
bayesian-optimization (1.0.1)
bcrypt (3.1.6)
beautifulsoup4 (4.6.3)
bitarray (0.8.3)
bkcharts (0.2)
bkzep (0.6.1)
bleach (3.2.2)
blosc (1.8.1)
bokeh (1.0.4)
boto (2.49.0)
boto3 (1.9.42)
botocore (1.12.42)
Bottleneck (1.2.1)
bs4 (0.0.1)
bson (0.5.8)
bz2file (0.98)
cachetools (4.2.0)
camelot-py (0.7.2)
catboost (1.0.6)
certifi (2020.6.20)
certipy (0.1.3)
cffi (1.11.2)
chainer (5.4.0)
chardet (3.0.4)
Click (7.0)
cliff (2.14.1)
cloudpickle (0.8.1)
clyent (1.2.1)
cmaes (0.8.2)
cmd2 (0.9.11)
colorama (0.3.9)
colorlog (4.0.2)
colorlover (0.3.0)
configparser (3.7.4)
confuse (1.1.0)
conllu (0.11)
constantly (15.1.0)
contextlib2 (0.5.5)
cookies (2.2.1)
cryptography (2.4.1)
cssselect (1.0.3)
cufflinks (0.17.3)
cv2-wrapper (0.1)
cv2wrap (1.0)
cx-Oracle (7.1.1)
cycler (0.10.0)
cymem (2.0.2)
Cython (0.29.21)
cytoolz (0.9.0.1)
dash (1.19.0)
dash-core-components (1.15.0)
dash-html-components (1.1.2)
dash-renderer (1.9.0)
dash-table (4.11.2)
dask (2.30.0)
dask-searchcv (0.2.0)
dataclasses (0.6)
DateTime (4.3)
decorator (4.3.2)
deepspeech (0.4.1)
defusedxml (0.5.0)
dill (0.2.8.2)
distributed (1.27.0)
Django (3.1.4)
django-auth-kerberos (1.2.5)
DKVTools (0.0.17)
dnspython (1.16.0)
docker (3.5.1)
docker-pycreds (0.4.0)
docutils (0.14)
ecdsa (0.13)
editdistance (0.5.2)
entrypoints (0.3)
enum34 (1.1.6)
et-xmlfile (1.0.1)
filelock (3.0.10)
flaky (3.4.0)
Flask (1.1.2)
Flask-Compress (1.4.0)
Flask-Cors (3.0.3)
flask-restx (0.5.1)
fsspec (0.8.4)
ftfy (5.5.0)
funcsigs (1.0.2)
future (0.17.1)
fuzzyfinder (2.1.0)
fuzzywuzzy (0.17.0)
gast (0.2.0)
gc-prometheus (0.1.0)
gensim (3.6.0)
getch (1.0)
gevent (1.3.6)
glob2 (0.5)
google-api-core (1.25.0)
google-auth (1.23.0)
googleapis-common-protos (1.52.0)
graphviz (0.10.1)
greenlet (0.4.15)
grin (1.2.1)
grpcio (1.16.0)
gunicorn (19.9.0)
h5py (2.8.0)
hdfs3 (0.3.0)
HeapDict (1.0.0)
html5validator (0.3.1)
htmlmin (0.1.12)
hyperopt (0.1.2)
idna (2.7)
ImageHash (4.1.0)
imageio (2.5.0)
imagesize (1.1.0)
imbalanced-learn (0.4.3)
imblearn (0.0)
importlib-metadata (4.8.3)
ioloop (0.1a0)
ipaddress (1.0.22)
ipykernel (5.1.0)
ipython (7.3.0)
ipython-genutils (0.2.0)
ipywidgets (7.6.3)
itsdangerous (1.1.0)
JayDeBeApi (1.1.1)
jdcal (1.4)
jedi (0.17.0)
jellyfish (0.6.1)
Jinja2 (2.11.2)
jmespath (0.9.3)
joblib (1.0.1)
JPype1 (0.6.3)
json-logging (1.2.11)
json-utils (0.2)
jsondiff (1.1.1)
jsonnet (0.10.0)
jsonpickle (1.0)
jsonschema (2.6.0)
jupyter (1.0.0)
jupyter-client (6.1.7)
jupyter-console (6.0.0)
jupyter-core (4.7.0)
jupyter-dashboards (0.7.0)
jupyter-telemetry (0.1.0)
jupyterhub (1.3.0)
jupyterhub-ldapauthenticator (1.3.2)
jupyterlab (0.35.4)
jupyterlab-server (0.2.0)
jupyterlab-widgets (1.0.0)
kazoo (2.8.0)
Keras (2.2.4)
Keras-Applications (1.0.6)
Keras-Preprocessing (1.0.5)
kiwisolver (1.0.1)
ldap3 (2.6)
librosa (0.6.3)
lightgbm (2.2.3)
linecache2 (1.0.0)
llvmlite (0.28.0)
locket (0.2.0)
lxml (4.5.0)
Mako (1.0.7)
Markdown (3.0.1)
MarkupSafe (1.1.1)
marshmallow (2.19.1)
matplotlib (3.2.0)
mccabe (0.6.1)
missingno (0.4.2)
mistune (0.8.4)
mock (2.0.0)
modin (0.8.2)
mongomock (3.16.0)
more-itertools (4.3.0)
Morfessor (2.0.4)
moto (1.3.4)
mpc (0.0.3)
mpmath (1.1.0)
msgpack (0.6.1)
msgpack-numpy (0.4.3.2)
msgpack-python (0.5.6)
murmurhash (1.0.1)
mysqlclient-deps (0.0.2)
naive-bayes (0.1.1)
nbconvert (5.4.1)
nbformat (4.4.0)
neo4j (4.2.0)
neobolt (1.7.17)
networkx (2.4)
nltk (3.3)
nose (1.3.7)
notebook (6.1.5)
npm (0.1.1)
numba (0.43.0)
numexpr (2.6.9)
numpy (1.17.0)
numpydoc (0.8.0)
oauthlib (3.1.0)
opencv-python (4.1.2.30)
openpyxl (2.6.2)
optional-django (0.1.0)
optuna (3.0.1)
overrides (1.9)
packaging (21.2)
pamela (1.0.0)
pandas (1.1.4)
pandas-profiling (2.11.0)
pandocfilters (1.4.2)
paramiko (2.4.2)
parsimonious (0.8.0)
parso (0.8.0)
partd (0.3.10)
path.py (11.5.2)
pathlib (1.0.1)
pathlib2 (2.3.3)
patsy (0.5.1)
pbr (5.1.1)
pdfminer.six (20181108)
pdfminer2 (20151206)
pdfminer3 (2018.12.3.0)
pexpect (4.6.0)
phik (0.11.0)
pickle5 (0.0.6)
pickleshare (0.7.5)
Pillow (6.2.0)
Pillow-PIL (0.1.dev0)
PillowTurtle (0.1)
pip (9.0.1)
pipdeptree (0.13.2)
pipeline (0.1.0)
pkgconfig (1.4.0)
pkginfo (1.5.0.1)
plac (0.9.6)
plotly (4.14.3)
pluggy (0.8.0)
ply (3.11)
polyglot (16.7.4)
preshed (2.0.1)
prettytable (0.7.2)
progressbar2 (3.39.3)
prometheus-client (0.5.0)
prompt-toolkit (2.0.8)
protobuf (3.14.0)
psutil (5.7.0)
ptyprocess (0.6.0)
py (1.7.0)
py2neo (4.2.0)
pyaml (17.12.1)
pyarrow (1.0.1)
pyasn1 (0.4.4)
pyasn1-modules (0.2.4)
pybind11 (2.5.0)
pycld2 (0.31)
pycorenlp (0.3.0)
pycosat (0.6.3)
pycparser (2.19)
pycrypto (2.6.1)
pycryptodome (3.7.0)
pyflakes (2.1.1)
pygam (0.8.0)
Pygments (2.3.1)
PyHive (0.6.1)
pykerberos (1.2.1)
pymongo (4.1.0)
PyNaCl (1.3.0)
pyodbc (4.0.26)
pyOpenSSL (19.0.0)
pyparsing (2.3.0)
PyPDF2 (1.26.0)
pyperclip (1.8.2)
PyPrind (2.11.2)
pyreadstat (0.2.1)
pysolr (3.9.0)
pytest (3.10.1)
pytest-runner (4.4)
python-box (3.2.4)
python-dateutil (2.7.5)
python-editor (1.0.4)
python-jose (2.0.2)
python-json-logger (2.0.1)
python-oauth2 (1.1.0)
python-speech-features (0.6)
python-times (0.1.1)
python-utils (2.3.0)
pytorch-warmup (0.0.4)
pytz (2017.3)
pyvis (0.1.8.0)
PyWavelets (1.0.2)
pyxdg (0.26)
PyYAML (3.13)
pyzmq (17.1.2)
qtconsole (4.4.3)
regex (2018.1.10)
requests (2.25.1)
requests-kerberos (0.12.0)
resampy (0.2.1)
responses (0.10.3)
retrying (1.3.3)
robobrowser (0.5.3)
roman (3.1)
rsa (3.4.2)
ruamel.yaml (0.16.12)
ruamel.yaml.clib (0.2.2)
rulefit (0.3.1)
s3transfer (0.1.13)
scandir (1.9.0)
scikit-image (0.14.2)
scikit-learn (0.22)
scikit-optimize (0.9.0)
scipy (1.5.2)
seaborn (0.11.1)
searchgrid (0.2.0)
Send2Trash (1.5.0)
sentinels (1.0.0)
service-identity (18.1.0)
setuptools (53.0.0)
setuptools-scm (3.2.0)
shap (0.28.5)
simplegeneric (0.8.1)
singledispatch (3.4.0.3)
six (1.15.0)
slate-db (0.1.1)
slicer (0.0.7)
smart-open (1.8.0)
snowballstemmer (1.2.1)
sortedcollections (1.1.2)
sortedcontainers (2.1.0)
SortedSet (1.0)
SoundFile (0.10.2)
sox (1.3.7)
spacy (2.0.16)
spark-nlp (1.7.3)
Sphinx (1.8.2)
sphinxcontrib-websupport (1.1.0)
SQLAlchemy (1.2.18)
sqlparse (0.2.4)
stanfordcorenlp (3.9.1.1)
statsmodels (0.9.0)
stevedore (1.30.1)
subprocess32 (3.5.3)
sudospawner (0.5.2)
sympy (1.4)
tables (3.5.1)
tabula (1.0.5)
tangled-up-in-unicode (0.0.6)
tblib (1.3.2)
telnetlib3 (1.0.2)
tensorboard (1.12.0)
tensorboardX (1.2)
tensorflow (1.12.0)
termcolor (1.1.0)
terminado (0.8.1)
testpath (0.4.2)
textblob (0.15.3)
thinc (6.12.1)
TkToolsD (0.0.25)
toolz (0.9.0)
torch (1.7.0)
torchvision (0.2.1)
tornado (6.0.4)
tqdm (4.52.0)
traitlets (4.3.2)
typing (3.6.6)
typing-extensions (4.1.1)
ujson (1.35)
unicodecsv (0.14.1)
Unidecode (1.0.22)
urllib3 (1.24.1)
vaderSentiment (3.2.1)
virtualenv (16.4.3)
visions (0.6.0)
wcwidth (0.1.7)
webencodings (0.5.1)
websocket-client (0.54.0)
Werkzeug (0.15.2)
wheel (0.32.3)
widgetsnbextension (3.5.1)
wordcloud (1.5.0)
wrapt (1.10.11)
Xclipboard (1.1)
xgboost (1.0.0)
xlrd (1.2.0)
XlsxWriter (1.1.6)
xlwt (1.3.0)
xmltodict (0.11.0)
zict (0.1.4)
zipp (3.6.0)
zope.interface (5.4.0)
  File "/tmp/ipykernel_13/676133615.py", line 141
    ioloop (0.1a0)
              ^
SyntaxError: invalid decimal literal
